--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -160,6 +160,17 @@
                 </div>
 
                 <div class="entry with-label" ng-show="showDebugModeOption && zestStationData.demoMobileKeyModeEnabled === 'true' ">
+                    <label>Mobile Key Demo-Flow (Third Party App)</label>
+                    <label class='admin-label-description'>If the Hotel has a Non-SNT Mobile Key, select Third Party</label>
+                    <div class="entry select">
+                        <select ng-model="zestStationData.thirdPartyMobileKey">
+                            <option value="true">Third Party</option>
+                            <option value="false">Default</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="entry with-label" ng-show="showDebugModeOption && zestStationData.demoMobileKeyModeEnabled === 'true' ">
                     <label>Try Mobile Key Flow</label>
                     <label class='admin-label-description'>Clicking this button will take you directly to the mobile key flow for Testing Only</label>
                     <div class="select button" type="button" touch-press="testRunMobileKeyCheckin()">
