CICO-38171 CICO-38012 CICO-38105 Exactonline endpoint select dropdown fixed Room Type rate configuration for custom rates in new groups and allotments fixed ngBindHtml syntax changes fixed

--- a/admin/directives/selectBox/adDropdownboxName.html
+++ b/admin/directives/selectBox/adDropdownboxName.html
@@ -5,7 +5,7 @@
 
     <div class='select'>
         <select ng-class="{'placeholder': ngModel == ''}"
-                ng-attr-convert-to-number="{{bindNumber}}"
+                convert-to-number
                 id="{{id}}"
                 name="{{name}}"
                 class="{{selboxClass}}"
