--- a/zest_station/partials_v2/zsOwsMsgListing.html
+++ b/zest_station/partials_v2/zsOwsMsgListing.html
@@ -3,7 +3,7 @@
     <div class="popup-content message">
         <!-- Add class "single-message" if there's only 1 message to show. Otherwise add class "message" -->
         <h2 class="nocaps">
-             <text editable-text="OWS_MESSAGE_HEADER"> {{'OWS_MESSAGE_HEADER' |translate}}</text> <text>{{currentpageNumber}}</strong> of <strong>{{owsMessages.length}}</text>
+             <text editable-text="OWS_MESSAGE_HEADER"> {{'OWS_MESSAGE_HEADER' |translate}}</text>&nbsp;{{currentpageNumber}}</strong> of <strong>{{owsMessages.length}}</text>
         </h2>
         <div id="message-content">
             <!-- Logo, for print only -->
