--- a/zest_station/partials_v2/checkin/zsCheckinAddon.html
+++ b/zest_station/partials_v2/checkin/zsCheckinAddon.html
@@ -31,7 +31,7 @@
 <!-- add .open when showing popuo -->
 <div id="popup-overlay" ng-class="{'open':showPopup}"></div>
 <!-- Content -->
-<section id="main" class="admin-screen" role="main">
+<section id="main" class="addon-screen" role="main">
     <div id="content">
         <h1>Enhance your stay?</h1>
         <h3>Add Ons Total: ${{getAmountTotal()}}</h3>
@@ -93,7 +93,7 @@
                     <div ng-include="icons.url.right_arrow_icon"></div>
                 </button>
             </div>
-            <button type="button" class="button">Continue</button>
+            <button type="button" class="button" click-touch="addonPurchaseCompleted()">Continue</button>
         </div>
     </div>
 </section>
