--- a/zest_station/partials_v2/checkin/zsCheckinAddon.html
+++ b/zest_station/partials_v2/checkin/zsCheckinAddon.html
@@ -85,11 +85,19 @@
             <!-- Remove this .button-group element when there is no navigation -->
             <div class="button-group" ng-if="addonsList.length > 1">
                 <!-- add 'disabled="disabled"' if there is no previous page -->
-                <button type="button" class="button only-icon" click-touch="viewPreviousPage()" ng-disabled="disablePreviousButton">
+                <button type="button" class="button only-icon" click-touch="viewPreviousPage()" ng-hide="disablePreviousButton">
+                     <div ng-include="icons.url.left_arrow_icon"></div>
+                </button>
+                <!-- touchstart is not following ng-disable, so for now keeping two versions -->
+                <button type="button" class="button only-icon" ng-show="disablePreviousButton" disabled="disabled">
                      <div ng-include="icons.url.left_arrow_icon"></div>
                 </button>
                 <!-- add 'disabled="disabled"' if there is no next page -->
-                <button type="button" class="button only-icon" click-touch="viewNextPage()" ng-disabled="disableNextButton">
+                <button type="button" class="button only-icon" click-touch="viewNextPage()" ng-hide="disableNextButton">
+                    <div ng-include="icons.url.right_arrow_icon"></div>
+                </button>
+                <!-- touchstart is not following ng-disable, so for now keeping two versions -->
+                <button type="button" class="button only-icon" ng-show="disableNextButton" disabled="disabled">
                     <div ng-include="icons.url.right_arrow_icon"></div>
                 </button>
             </div>
